2004-11-28  Zoltan Varga  <vargaz@freemail.hu>

	* corlib.dll.sources: Added some missing 2.0 exception classes.

2004-11-19  Raja R Harinath  <rharinath@novell.com>

	* Makefile (LIBRARY_COMPILE): Simplify.

2004-10-29  Raja R Harinath  <rharinath@novell.com>

	* Makefile: Move support for building net_2_0_bootstrap libraries
	to gmcs.

2004-10-04  Zoltan Varga  <vargaz@freemail.hu>

	* corlib.dll.sources: Add more 2.0 classes under System.Runtime.InteropServices.

	* corlib.dll.sources: Add new 2.0 classes under System.Runtime.InteropServices.

2004-09-29  Zoltan Varga  <vargaz@freemail.hu>

	* corlib.dll.sources: Add System.Runtime.InteropServices/UnmanagedFunctionPointerAttribute.cs.

2004-09-27  Zoltan Varga  <vargaz@freemail.hu>

	* corlib.dll.sources: Add more 2.0 System.Reflection classes.
	
	* corlib.dll.sources: Add some 2.0 System.Reflection classes.

2004-09-26  Zoltan Varga  <vargaz@freemail.hu>

	* corlib_test.dll.sources: Add System.Reflection/FieldInfoTest.
	
	* corlib_test.dll.sources: Add System.Reflection/MethodInfoTest.

2004-09-25  Zoltan Varga  <vargaz@freemail.hu>

	* corlib_test.dll.sources: Add System.Reflection/ParameterInfoTest.

2004-09-23  Zoltan Varga  <vargaz@freemail.hu>

	* corlib.dll.sources: Add System.Reflection.ObfuscateAssemblyAttribute
	and System.Reflection.ObfuscationAttribute.

2004-09-21  Raja R Harinath  <rharinath@novell.com>

	* Makefile (net20bootstrapcorlib): Rename from net20bootstraplib.
	Build 'mscorlib.dll' using the 'net_2_0_bootstrap' profile.
	(net20bootstrapSystem): New.  Build 'System.dll' using the
	'net_2_0_bootstrap' profile.
	($(gmcs)): Depend on both the above.
	(CLEAN_FILES) [PROFILE=net_2_0]: Clean the 'net_2_0_bootstrap'
	profile and 'gmcs' too.

2004-09-20  Gert Driesen <drieseng@users.sourceforge.net>

	* corlib.dll.sources: Removed ReadOnlyCollections.cs and Collection.cs
	from corlib System.Collections.Generics to System assembly

2004-09-19  Zoltan Varga  <vargaz@freemail.hu>
