@@ -1,3 +1,7 @@
+2004-12-06  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* TextWriterTest.cs : added.
+
 2004-12-04  Ben Maurer  <bmaurer@ximian.com>
 
 	* DirectoryInfoTest.cs: Check for CreateSubdirectory with empty string.
